--- a/manifest.json
+++ b/manifest.json
@@ -5,9 +5,9 @@
   "description": "Save & switch Reddit accounts",
   "author": "Yuilix",
   "icons": {
-    "16": "icon.png",
-    "48": "icon.png",
-    "128": "icon.png"
+    "16": "new_icon.png",
+    "48": "new_icon.png",
+    "128": "new_icon.png"
   },
   "permissions": [
     "cookies",
